# abb_motion_program_exec

./: pyproject.toml
docs/: robot_setup_manual.md
robot/autosetup/: backinfo.tail  backinfo_egm.tail
src/abb_motion_program_exec/: __main__.py  project_setup.py
src/abb_motion_program_exec/robotstudio_setup/: __main__.py
