[build-system]
requires = ["setuptools", "wheel"]

[project]
name = "abb_motion_program_exec"
version = "0.7.4"
authors = [
    {name ="John Wason", email = "wason@wasontech.com"}
]
description = "Python package to execute motion commands on ABB robots and log results"
license = {text = "Apache-2.0"}
requires-python = ">=3.6"
dependencies = [
    "requests",
    "numpy",
    "abb-robot-client[aio]",
    "dataclasses; python_version<'3.7'"
]
readme = "README.md"

[project.urls]
homepage = "https://github.com/rpiRobotics/abb_motion_program_exec"
documentation = "https://abb-motion-program-exec.readthedocs.io/en/latest/"
repository = "https://github.com/rpiRobotics/abb_motion_program_exec"

[project.scripts]
abb-motion-program-exec-robotraconteur = "abb_motion_program_exec.robotraconteur.abb_motion_program_exec_robotraconteur:main"

[project.optional-dependencies]
test = [
    "pytest",
]
robotraconteur = [
    "robotraconteur",
    "robotraconteurcompanion",
    "drekar-launch-process",
    "robotraconteur-abstract-robot"
]

[tool.setuptools]
packages = [
	"abb_motion_program_exec",
	"abb_motion_program_exec.commands",
	"abb_motion_program_exec.robotraconteur",
	"abb_motion_program_exec.robot",
	"abb_motion_program_exec.robot.config_params",
	"abb_motion_program_exec.robot.config_params_egm",
	"abb_motion_program_exec.robot.config_params_multimove",
	"abb_motion_program_exec.robot.HOME",
	"abb_motion_program_exec.robot.autosetup",
	]

[tool.setuptools.package-dir]
"abb_motion_program_exec" = "src/abb_motion_program_exec"
"abb_motion_program_exec.commands" = "src/abb_motion_program_exec/commands"
"abb_motion_program_exec.robot" = "robot"
"abb_motion_program_exec.robotraconteur" = "src/abb_motion_program_exec/robotraconteur"
"abb_motion_program_exec.robot.config_params" = "robot/config_params"
"abb_motion_program_exec.robot.config_params_egm" = "robot/config_params_egm"
"abb_motion_program_exec.robot.config_params_multimove" = "robot/config_params_multimove"
"abb_motion_program_exec.robot.HOME" = "robot/HOME"
"abb_motion_program_exec.robot.autosetup" = "robot/autosetup"


[tool.setuptools.package-data]
"abb_motion_program_exec.robotraconteur" = ["*.robdef"]
"abb_motion_program_exec.robot.config_params" = ["*.*"]
"abb_motion_program_exec.robot.config_params_egm" = ["*.*"]
"abb_motion_program_exec.robot.config_params_multimove" = ["*.*"]
"abb_motion_program_exec.robot.HOME" = ["*.*"]
"abb_motion_program_exec.robot.autosetup" = ["*.*"]
